# RNN

./: .gitignore  ACTION_PLAN.md  COMPREHENSIVE_ANALYSIS.md  CONTRIBUTING.md  DIRECTORY_STRUCTURE.txt  LICENSE  MANIFEST.in  README.md  V3_CHANGELOG.md  V3_ULTRA_ENHANCEMENTS.md  cleanup.py  inference.py  inference_improved.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  train_on_colab.ipynb  train_on_colab_fixed.ipynb  train_production.py
.history/: FINAL_REPORT_20251014215146.md  test_generation_20251015054346.py  train_local_memory_efficient_20251014221807.py  train_production_full_20251015054239.py  train_ultrafast_20251015000118.py  train_ultrafast_20251015054239.py
benchmarks/: compare_transformer.py  glue_benchmark.py  quick_benchmark.py  superglue_benchmark.py
docs/: README.md.backup
examples/: simple_usage_example.py
resonance_nn/: __init__.py  spectral_optimized.py  spectral_optimized_backup.py  wrapper.py
resonance_nn/deployment/: quantize.py
tests/: __init__.py  test_imports.py  test_training_stability.py
wandb/offline-run-20251014_221025-274kvzmi/: run-274kvzmi.wandb
wandb/offline-run-20251014_221025-274kvzmi/files/: requirements.txt
