[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "resonance-nn"
version = "0.1.0"
description = "Frequency-Domain Information Processing with Holographic Memory"
readme = "README.md"
authors = [
    {name = "Oluwatosin A. Afolabi", email = "afolabi@genovotech.com"}
]
license = {text = "Proprietary - Genovo Technologies Internal Use Only"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: Other/Proprietary License",
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["neural-networks", "deep-learning", "frequency-domain", "holographic-memory"]
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]
examples = [
    "matplotlib>=3.5.0",
    "jupyter>=1.0.0",
    "pandas>=1.4.0",
]

[project.urls]
Homepage = "https://github.com/genovotech/resonance-nn"
Documentation = "https://resonance-nn.readthedocs.io"
Repository = "https://github.com/genovotech/resonance-nn"
"Bug Tracker" = "https://github.com/genovotech/resonance-nn/issues"
